--- a/src/components/EnvitedButton.module.scss
+++ b/src/components/EnvitedButton.module.scss
@@ -1,5 +1,6 @@
 .envited-button {
     padding: 16px 21px;
+    border: none;
     border-radius: 10px;
     background-image: linear-gradient(90deg, #8456EC 3.25%, #E87BF8 100%);
     color: #fff;
