--- a/src/pages/Event.module.scss
+++ b/src/pages/Event.module.scss
@@ -32,5 +32,9 @@
                 font-weight: 700;
             }
         }
+
+        .event-end-time {
+            font-weight: 700;
+        }
     }
 }
