--- a/src/pages/Landing.module.scss
+++ b/src/pages/Landing.module.scss
@@ -23,7 +23,7 @@
             line-height: 1;
 
             .heading-gradient {
-                background: linear-gradient(90deg, #8456EC 24.2%, #E87BF8 120.46%);
+                background-image: linear-gradient(90deg, #8456ec 24.2%, #e87bf8 120.46%);
                 background-clip: text;
                 line-height: 41px;
                 text-align: center;
