--- a/src/components/InfoDisplayer.module.scss
+++ b/src/components/InfoDisplayer.module.scss
@@ -24,6 +24,7 @@
         min-width: 0; // fix overflow
 
         .info-title {
+            margin: 0;
             color: #240d57;
             font-size: 16px;
             font-weight: 700;
@@ -41,6 +42,7 @@
             overflow: hidden;
             white-space: nowrap;
             text-overflow: ellipsis;
+            margin: 0;
         }
     }
 }
